<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="sr"
        app:icon="@drawable/ic_translate_black_24dp"
        app:entries="@array/language_entries"
        app:entryValues="@array/language_values"
        app:key="@string/language_preference_key"
        app:title="@string/language_preference"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="0"
        app:icon="@drawable/ic_notification_black_24dp"
        app:entries="@array/notifications_entries"
        app:entryValues="@array/notifications_values"
        app:key="@string/notifications_preference_key"
        app:title="@string/notifications_preference"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>